--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cross-fetch": "^4.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
